fix: shifted logo over by .4em

--- a/main.css
+++ b/main.css
@@ -31,3 +31,7 @@ menu li {
     padding: 0 0.3em;
 }
 
+.navbar-brand {
+    padding-left: 0.4em;
+}
+
